force-app/main/default/objects/Opportunity/fields/Account_Contact__c.field-meta.xml
<CustomField>
    <fullName>Account_Contact__c</fullName>
    <formula>IF(ISBLANK(Account.PersonContact.MobilePhone), Account.PersonContact.Phone, Account.PersonContact.MobilePhone)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Contact</label>
    <type>Text</type>
</CustomField>