force-app/main/default/objects/Opportunity/fields/Account_DOB__c.field-meta.xml
<CustomField>
    <fullName>Account_DOB__c</fullName>
    <formula>IF( Account.IsPersonAccount, Account.PersonContact.Birthdate, Account.Date_of_Birth_Arabic__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account DOB</label>
    <type>Date</type>
</CustomField>