force-app/main/default/objects/Opportunity/fields/Account_Email__c.field-meta.xml
<CustomField>
    <fullName>Account_Email__c</fullName>
    <formula>IF(Account.IsPersonAccount, Account.PersonContact.Email, Account.Company_Email__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Email</label>
    <type>Text</type>
</CustomField>