force-app/main/default/objects/Opportunity/fields/Account_Gender__c.field-meta.xml
<CustomField>
    <fullName>Account_Gender__c</fullName>
    <formula>TEXT(Account.Gender__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Gender</label>
    <type>Text</type>
</CustomField>