force-app/main/default/objects/Opportunity/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <formula>IF(
Account.Name &lt;&gt; &apos;&apos;, Account.Name,
Account.FirstName+&quot; &quot;+ Account.MiddleName +&quot; &quot;+Account.LastName
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>