force-app/main/default/objects/Opportunity/fields/Agency_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Agency_Mobile__c</fullName>
    <formula>Agency__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agency Mobile</label>
    <type>Text</type>
</CustomField>