force-app/main/default/objects/Opportunity/fields/Agent_Contact__c.field-meta.xml
<CustomField>
    <fullName>Agent_Contact__c</fullName>
    <formula>IF(ISBLANK(Agent__r.MobilePhone), Agent__r.Phone, Agent__r.MobilePhone)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Agent Contact</label>
    <type>Text</type>
</CustomField>