force-app/main/default/objects/Opportunity/fields/Assisted_by_Agent__c.field-meta.xml
<CustomField>
    <fullName>Assisted_by_Agent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Assisted by Agent?</label>
    <type>Checkbox</type>
</CustomField>