force-app/main/default/objects/Opportunity/fields/Booked_To_Reserved_Days__c.field-meta.xml
<CustomField>
    <fullName>Booked_To_Reserved_Days__c</fullName>
    <formula>DATEVALUE(Reserved_Date_Time__c) - DATEVALUE(Booking_Date_Time__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booked To Reserved Days</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>