force-app/main/default/objects/Opportunity/fields/Booking_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>Booking_Amount_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Booking Amount Paid</label>
    <type>Checkbox</type>
</CustomField>