force-app/main/default/objects/Opportunity/fields/Booking_Form_Signed__c.field-meta.xml
<CustomField>
    <fullName>Booking_Form_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Booking Form Signed</label>
    <type>Checkbox</type>
</CustomField>