force-app/main/default/objects/Opportunity/fields/Booking_Month__c.field-meta.xml
<CustomField>
    <fullName>Booking_Month__c</fullName>
    <formula>IF(
  NOT(ISBLANK(Booking_Date_Time__c)),
  TEXT(YEAR(DATEVALUE(Booking_Date_Time__c))) &amp; &quot;-&quot; &amp; 
  TEXT(MONTH(DATEVALUE(Booking_Date_Time__c))),
  NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking Month</label>
    <type>Text</type>
</CustomField>