force-app/main/default/objects/Opportunity/fields/Booking_Month_Name__c.field-meta.xml
<CustomField>
    <fullName>Booking_Month_Name__c</fullName>
    <formula>CASE(
    MONTH(DATEVALUE(Booking_Date_Time__c )),
    1, &quot;January&quot;,
    2, &quot;February&quot;,
    3, &quot;March&quot;,
    4, &quot;April&quot;,
    5, &quot;May&quot;,
    6, &quot;June&quot;,
    7, &quot;July&quot;,
    8, &quot;August&quot;,
    9, &quot;September&quot;,
    10, &quot;October&quot;,
    11, &quot;November&quot;,
    12, &quot;December&quot;,
    &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Booking Month Name</label>
    <type>Text</type>
</CustomField>