force-app/main/default/objects/Opportunity/fields/Building__c.field-meta.xml
<CustomField>
    <fullName>Building__c</fullName>
    <formula>Unit__r.Building__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Building</label>
    <type>Text</type>
</CustomField>