force-app/main/default/objects/Opportunity/fields/Cancelled_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_Date_Time__c</fullName>
    <label>Cancelled At</label>
    <type>DateTime</type>
</CustomField>