force-app/main/default/objects/Opportunity/fields/CEO_Approval_Required__c.field-meta.xml
<CustomField>
    <fullName>CEO_Approval_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CEO Approval Required</label>
    <type>Checkbox</type>
</CustomField>