force-app/main/default/objects/Opportunity/fields/Client_City__c.field-meta.xml
<CustomField>
    <fullName>Client_City__c</fullName>
    <formula>MID(
Client_Location__c,
FIND(&apos;&quot;city&quot;:&quot;&apos;, Client_Location__c) + 8,
FIND(&apos;&quot;&apos;, Client_Location__c, FIND(&apos;&quot;city&quot;:&quot;&apos;, Client_Location__c) + 8) - (FIND(&apos;&quot;city&quot;:&quot;&apos;, Client_Location__c) + 8)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client City</label>
    <type>Text</type>
</CustomField>