force-app/main/default/objects/Opportunity/fields/Client_Location__c.field-meta.xml
<CustomField>
    <fullName>Client_Location__c</fullName>
    <label>Client Location</label>
    <type>TextArea</type>
</CustomField>