force-app/main/default/objects/Opportunity/fields/Client_Region__c.field-meta.xml
<CustomField>
    <fullName>Client_Region__c</fullName>
    <formula>MID(
Client_Location__c,
FIND(&apos;&quot;region&quot;:&quot;&apos;, Client_Location__c) + 10,
FIND(&apos;&quot;&apos;, Client_Location__c, FIND(&apos;&quot;region&quot;:&quot;&apos;, Client_Location__c) + 10) - (FIND(&apos;&quot;region&quot;:&quot;&apos;, Client_Location__c) + 10)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client Region</label>
    <type>Text</type>
</CustomField>