force-app/main/default/objects/Opportunity/fields/Days_Passed_Since_Closing__c.field-meta.xml
<CustomField>
    <fullName>Days_Passed_Since_Closing__c</fullName>
    <formula>IF(
    DATEVALUE(Booking_Date_Time__c) &lt;= TODAY(),
    TODAY() - DATEVALUE(Booking_Date_Time__c),
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Passed Since Closing</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>