force-app/main/default/objects/Opportunity/fields/Direct_Agent__c.field-meta.xml
<CustomField>
    <fullName>Direct_Agent__c</fullName>
    <formula>IF(Assisted_by_Agent__c &lt;&gt; true, &apos;Direct&apos;, &apos;Agent&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Direct / Agent</label>
    <type>Text</type>
</CustomField>