force-app/main/default/objects/Opportunity/fields/DLD_Oqood_Amount__c.field-meta.xml
<CustomField>
    <fullName>DLD_Oqood_Amount__c</fullName>
    <formula>Unit__r.Oqood_DLD_Fee_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DLD / Oqood Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>