force-app/main/default/objects/Opportunity/fields/DLD_Paid__c.field-meta.xml
<CustomField>
    <fullName>DLD_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DLD Paid</label>
    <type>Checkbox</type>
</CustomField>