force-app/main/default/objects/Opportunity/fields/DLD_Waver__c.field-meta.xml
<CustomField>
    <fullName>DLD_Waver__c</fullName>
    <label>DLD Waver</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Approvals</valueSetName>
    </valueSet>
</CustomField>