force-app/main/default/objects/Opportunity/fields/DLD_Waver_Requested__c.field-meta.xml
<CustomField>
    <fullName>DLD_Waver_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DLD Waver Requested</label>
    <type>Checkbox</type>
</CustomField>