force-app/main/default/objects/Opportunity/fields/Down_Payment_Paid__c.field-meta.xml
<CustomField>
    <fullName>Down_Payment_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Down Payment Paid</label>
    <type>Checkbox</type>
</CustomField>