force-app/main/default/objects/Opportunity/fields/Eligible_for_Comission__c.field-meta.xml
<CustomField>
    <fullName>Eligible_for_Comission__c</fullName>
    <formula>Unit__r.Eligible_for_Comission__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Eligible for Comission</label>
    <type>Checkbox</type>
</CustomField>