force-app/main/default/objects/Opportunity/fields/Is_20_Paid__c.field-meta.xml
<CustomField>
    <fullName>Is_20_Paid__c</fullName>
    <formula>Unit__r.Is_20_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is 20% Paid</label>
    <type>Checkbox</type>
</CustomField>