force-app/main/default/objects/Opportunity/fields/Is_Any_Date_In_Monday_Week__c.field-meta.xml
<CustomField>
    <fullName>Is_Any_Date_In_Monday_Week__c</fullName>
    <formula>DATEVALUE(Booking_Date_Time__c) &gt;= (DATEVALUE(NOW()) - MOD(DATEVALUE(NOW()) - DATE(1900, 1, 8), 7) - 7) &amp;&amp;
DATEVALUE(Booking_Date_Time__c) &lt;  (DATEVALUE(NOW()) - MOD(DATEVALUE(NOW()) - DATE(1900, 1, 8), 7))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Any Date In Monday Week</label>
    <type>Checkbox</type>
</CustomField>