force-app/main/default/objects/Opportunity/fields/Is_Any_Date_In_Previous_Month__c.field-meta.xml
<CustomField>
    <fullName>Is_Any_Date_In_Previous_Month__c</fullName>
    <formula>AND(
    DATEVALUE(Booking_Date_Time__c) &gt;= 
        DATE(YEAR(TODAY()), MONTH(TODAY()), 1) - 1
        - DAY(DATE(YEAR(TODAY()), MONTH(TODAY()), 1) - 1) + 1,
    DATEVALUE(Booking_Date_Time__c) &lt;
        DATE(YEAR(TODAY()), MONTH(TODAY()), 1)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Any Date In Previous Month</label>
    <type>Checkbox</type>
</CustomField>