force-app/main/default/objects/Opportunity/fields/Is_Any_Date_In_Previous_Month_Reserved__c.field-meta.xml
<CustomField>
    <fullName>Is_Any_Date_In_Previous_Month_Reserved__c</fullName>
    <formula>AND(
    DATEVALUE(Reserved_Date_Time__c) &gt;= 
        DATE(
            YEAR(ADDMONTHS(TODAY(), -1)),
            MONTH(ADDMONTHS(TODAY(), -1)),
            1
        ),
    DATEVALUE(Reserved_Date_Time__c) &lt;
        DATE(
            YEAR(TODAY()),
            MONTH(TODAY()),
            1
        )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Any Date In Previous Month Reserved</label>
    <type>Checkbox</type>
</CustomField>