force-app/main/default/objects/Opportunity/fields/Is_it_a_Resell__c.field-meta.xml
<CustomField>
    <fullName>Is_it_a_Resell__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is it a Resell</label>
    <type>Checkbox</type>
</CustomField>