force-app/main/default/objects/Opportunity/fields/Justification_For_Fee_Change__c.field-meta.xml
<CustomField>
    <fullName>Justification_For_Fee_Change__c</fullName>
    <label>Justification For Fee Change</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>