force-app/main/default/objects/Opportunity/fields/Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>Manager_Email__c</fullName>
    <formula>Owner.Manager_Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manager Email</label>
    <type>Text</type>
</CustomField>