force-app/main/default/objects/Opportunity/fields/Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Manager_Name__c</fullName>
    <formula>CASE(
 Owner.UserRole.Name,
 &quot;Sales Manager 1&quot;, &quot;Vijendra Singh&quot;,
 &quot;Sales Manager 2&quot;, &quot;Aiham Alkeilani&quot;,
 &quot;Sales Manager 3&quot;, &quot;Khalid Samir&quot;,
 &quot;Sales Manager 4&quot;, &quot;Honghao Cheng&quot;,
 &quot;Not Assigned&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manager</label>
    <type>Text</type>
</CustomField>