force-app/main/default/objects/Opportunity/fields/Offer_layout__c.field-meta.xml
<CustomField>
    <fullName>Offer_layout__c</fullName>
    <label>Offer layout</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contemporary</fullName>
            </value>
            <value>
                <fullName>Formal</fullName>
            </value>
            <value>
                <fullName>Traditional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>