force-app/main/default/objects/Opportunity/fields/Open_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Open_Opportunity__c</fullName>
    <formula>HYPERLINK(&apos;https://miradevelopments.lightning.force.com/lightning/r/Opportunity/&apos; &amp; Id &amp; &apos;/view&apos;, &quot;View Opportunity&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Open Opportunity</label>
    <type>Text</type>
</CustomField>