force-app/main/default/objects/Opportunity/fields/Owner_Credit_Amount__c.field-meta.xml
<CustomField>
    <fullName>Owner_Credit_Amount__c</fullName>
    <description>Attributed unit price for the Opportunity Owner: 50% on share deals, 100% on single deals.</description>
    <formula>IF(Share_Deal__c, Unit_Price__c * 0.5, Unit_Price__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Credit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>