force-app/main/default/objects/Opportunity/fields/Ownership_Share_of_the_Main_Purchaser__c.field-meta.xml
<CustomField>
    <fullName>Ownership_Share_of_the_Main_Purchaser__c</fullName>
    <defaultValue>1</defaultValue>
    <inlineHelpText>You can change it later if you are planning to add Joint Owners</inlineHelpText>
    <label>Ownership Share of the Main Purchaser</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>