force-app/main/default/objects/Opportunity/fields/Payment_Plan_Change__c.field-meta.xml
<CustomField>
    <fullName>Payment_Plan_Change__c</fullName>
    <label>Payment Plan Change</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Approvals</valueSetName>
    </valueSet>
</CustomField>