force-app/main/default/objects/Opportunity/fields/Payment_Plan_Change_Requested__c.field-meta.xml
<CustomField>
    <fullName>Payment_Plan_Change_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment Plan Change Requested</label>
    <type>Checkbox</type>
</CustomField>