force-app/main/default/objects/Opportunity/fields/Property_Code__c.field-meta.xml
<CustomField>
    <fullName>Property_Code__c</fullName>
    <formula>Unit__r.Property_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Code</label>
    <type>Text</type>
</CustomField>