force-app/main/default/objects/Opportunity/fields/Quarters_Sold__c.field-meta.xml
<CustomField>
    <fullName>Quarters_Sold__c</fullName>
    <formula>&quot;Q&quot; &amp;
CASE(
MONTH( Unit_Sold_Date_Only__c ),
1, &quot;1&quot;,
2, &quot;1&quot;,
3, &quot;1&quot;,
4, &quot;2&quot;,
5, &quot;2&quot;,
6, &quot;2&quot;,
7, &quot;3&quot;,
8, &quot;3&quot;,
9, &quot;3&quot;,
10, &quot;4&quot;,
11, &quot;4&quot;,
12, &quot;4&quot;,
&quot;N/A&quot;
) &amp; &quot; &quot; &amp; TEXT(YEAR( Unit_Sold_Date_Only__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quarters Sold</label>
    <type>Text</type>
</CustomField>